--- a/app-public/src/app/public/public-base/public-base.component.html
+++ b/app-public/src/app/public/public-base/public-base.component.html
@@ -1,5 +1,5 @@
 
-<div class="ui menu" style="border-radius: 0px;">
+<div class="ui top attached menu" style="border-radius: 0px;">
   <div class="left menu" style="margin-left: 8vw;">
   	<a class="item"></a>
     <a class="item" >
