--- a/app-public/src/app/public/public-review/article-display/article-display.component.html
+++ b/app-public/src/app/public/public-review/article-display/article-display.component.html
@@ -20,7 +20,7 @@
 			<h3>{{ article.title }}</h3>
 		</div>
 		<div class="content">
-			<p>{{ article.split(' ').slice(1,20).join(' ') }}</p>
+			<p>{{ article.content.split(' ').slice(1,20).join(' ') }}</p>
 		</div>
 		<a href="" class="read-more">Read More...</a>
 	</div>
