--- a/app-public/src/app/public/public-review/public-review.component.html
+++ b/app-public/src/app/public/public-review/public-review.component.html
@@ -11,8 +11,25 @@
 <div class="section">
 	<div class="ui grid">
 		<div class="row">
-			<div class="four wide column" id="song-column" *ngFor="let article of articles">
-				<app-article-display [article]="article"></app-article-display>
+			<div class="four wide column" id="song-column">
+				<div *ngFor="let article of songArticles">
+					<app-article-display [article]="article"></app-article-display>
+				</div>
+			</div>
+			<div class="four wide column" id="album-column">
+				<div *ngFor="let article of albumArticles">
+					<app-article-display [article]="article"></app-article-display>
+				</div>
+			</div>
+			<div class="four wide column" id="movie-column">
+				<div *ngFor="let article of movieArticles">
+					<app-article-display [article]="article"></app-article-display>
+				</div>
+			</div>
+			<div class="four wide column" id="show-column">
+				<div *ngFor="let article of showArticles">
+					<app-article-display [article]="article"></app-article-display>
+				</div>
 			</div>
 		</div>
 	</div>
