Addedfunctionality for podcast and interviews upload

--- a/app-public/src/app/admin/admin-article/admin-article-display/admin-article-display.component.html
+++ b/app-public/src/app/admin/admin-article/admin-article-display/admin-article-display.component.html
@@ -1,8 +1,8 @@
 
     <div class="ui fluid card">
     	<div class="image-container">
-    		<div *ngIf="hasImage " class="ui image">
-    			<img src="{{imageUrl}}" class="fluid visible content img-sef">
+    		<div *ngIf="hasImage " class="ui medium image sixxteen wide column">
+    			<img src="{{imageUrl}}" class="fluid img-sef">
     		</div>
     		<div *ngIf="!hasImage" class="right floated upload-image">
     			<button class="ui icon button" (click)="onClickButton()"><i class="fluid tiny plus icon"></i></button>
