--- a/app-public/src/app/admin/admin-sidebar/admin-sidebar.component.html
+++ b/app-public/src/app/admin/admin-sidebar/admin-sidebar.component.html
@@ -3,7 +3,7 @@
       <i class="home icon"></i>
       Home
     </a>
-    <a class="item" routerLink = "/admin/articles">
+    <a class="item" routerLink = "/admin/article">
       <i class="file alternate icon"></i>
       Articles
     </a>
