--- a/app-public/src/app/public/public-podcast/podcast-display/podcast-display.component.html
+++ b/app-public/src/app/public/public-podcast/podcast-display/podcast-display.component.html
@@ -1,20 +1,20 @@
 <div class="podcast-display">
 	<div class="ui grid">
 		<div class="row">
-			<div class="three wide column" style="border-right: solid 2px;">
-				<a href="https://google.com" class="ui fluid small image">
-					<img src="assets/img/w.jpg">
+			<div class="four wide column" style="border-right: solid 2px;">
+				<a href="https://google.com" class="ui medium image">
+					<img src="{{imageUrl}}" class="fluid">
 				</a>
 			</div>
 			<div class="twelve wide column " >
 				<div class="podcast-content">
-					<h4> Podcast Header </h4>
+					<h4> <a [routerLink]="['/podcast/view',podcast._id]">{{podcast.title}}</a> </h4>
 					<div class="meta">
-					    <span class="date">4/5/2020 |</span>
-					    <span class="time">5 min</span>
+					    <span class="date">{{ podcast.date_posted | date:"short"}} |</span>
+					    <span class="time">{{ podcast.file.length }}min</span>
 				    </div>
 				    <div class="description">
-				    	Podcast HeaderPodcast HeaderPodcast HeaderPodcast HeaderPodcast HeaderPodcast
+				    	{{podcast.description}}
 				    </div>
 				</div>
 			</div>
