--- a/views/song_article_form.hbs
+++ b/views/song_article_form.hbs
@@ -41,7 +41,7 @@
                         </div>
                         <div class="eight wide field">
                             <label>Tag</label>
-                            <select id="tag" class="ui selection dropdown">
+                            <select name="tag" class="ui selection dropdown">
                                 <option value="song">Song</option>
                                 <option value="show">Show</option>
                                 <option value="movie">Movie</option>
