--- a/app-public/src/app/admin/admin-article/admin-article-display/admin-article-display.component.css
+++ b/app-public/src/app/admin/admin-article/admin-article-display/admin-article-display.component.css
@@ -2,15 +2,12 @@
 	height: 6vh;
 }
 
-.small.image{
-	min-height:15vh;
-	max-height: 15vh; 
+.medium.image{
+	height:15vh;
 }
 
 .img-sef{
-    object-fit: fill;
-    min-height: 15vh !important; 
-	max-height: 15vh !important; 
+    object-fit: contain; 
 }
 .icon{
 	padding-right: 1vw;
