--- a/views/editor.hbs
+++ b/views/editor.hbs
@@ -28,8 +28,8 @@
 		<div class="row">
 			<div class="two wide column"></div>
 			<div class="twelve wide column">
-				<form class="ui form" id="editor" method="post" onload="addAction()">
-					<textarea oninput="autoGrow(this)" id="article-area" name="article" value="Default name for team." style="resize: none;overflow: hidden;min-height:500px;max-height: 900px;border: none">
+				<form class="ui form" id="editor" method="post">
+					<textarea oninput="javascript:autoGrow(this)" id="article-area" name="article" value="Default name for team." style="resize: none;overflow: hidden;min-height:500px;max-height: 900px;border: none">
     		        </textarea>
     		        <input class="ui button float-right" type="submit" value="Submit">
     		    </form>
@@ -48,6 +48,13 @@
     		element.style.height = "10px";
     		element.style.height = (element.scrollHeight)+"px";
     	}
+        function addAction(){
+            document.getElementById("editor").onsubmit = function(){
+                let querystring = window.location.href.split("editor/")[1];
+                console.log(querystring);
+                form.action = `/mean${querystring}`;
+            };   
+        };
     </script>
 </body>
 
